hphp/test/quick/too-few-args.php.expectf
Fatal error: Uncaught exception 'RuntimeException' with message 'foo() expects exactly 2 parameters, 0 given' in %s/hphp/test/quick/too-few-args.php:3
Stack trace:
%A
